--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -149,7 +149,7 @@
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a href="./pages/sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
+                        <a href="./../sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
                         <a href="./pages/tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
