video added in second business card

--- a/pages/Business/business_news_2.html
+++ b/pages/Business/business_news_2.html
@@ -96,7 +96,8 @@
                 land, and allowed them to seek a refund of royalty from April 1, 2005 onwards.
 
                 NMDC tanked 6 per cent, Hind Copper by over 4 per cent, Nalco by 2.7 per cent.
-            </div>
+            </div><br/><br/>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7l5gBwNHXpE?si=78UGFR8T9aY9Mx5_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- footer has been started from here -->
