--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -151,9 +151,9 @@
                     <div>
                         <a href="./../sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a href="./pages/tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
+                        <a href="./tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
-                        <a href="./pages/Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
+                        <a href="./../Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
                         <a href="./pages/Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
