video added in third business card

--- a/pages/Business/business_news_3.html
+++ b/pages/Business/business_news_3.html
@@ -92,6 +92,7 @@
                 in its August monetary policy review at 6.5 per cent.
 
             </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/C9EudIsKCpc?si=Gxl6JeByRs8rmnll" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- footer has been started from here -->
