--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -155,9 +155,9 @@
                         <hr>
                         <a href="./../Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
-                        <a href="./pages/Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
+                        <a href="./../Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <a href="./pages/Business/Business_News.html"><button>Load More +</button></a>
+                    <a href="./tech.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
