--- a/pages/Business/business_news_6.html
+++ b/pages/Business/business_news_6.html
@@ -101,9 +101,8 @@
 
                 Foreign institutional investors (FIIs) were net sellers in the capital markets on Tuesday as they
                 offloaded shares worth ₹2,107.17 crore, according to exchange data.
-
-
-            </div>
+            </div><br/><br/>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ajOCdGYlLOg?si=ID5mzAV7QqWNJwOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- footer has been started from here -->
