--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -74,6 +74,7 @@
     The 41mm Pixel Watch 3 with Bluetooth and Wi-Fi will go for $349, while the same configuration for the 45mm model will set you back $399. LTE connectivity adds $100 to the standard price.
     In UK the prices £349/399 with a £100 extra for the LTE modem, while those in continental Europe are looking at €399/€449 and €100 extra for the cellular version. Shipping in all markets starts September 10.
 </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VLAC75BeGjI?si=4db23fmu80Wvzn3W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
     <!-- footer has been started from here -->
 
