--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -66,7 +66,7 @@
 
     <img src="./../../images/pixelwatch.jpeg"style="height:400px;margin:20px">
     <br>
-<p>
+<p class="p-d">
     Inside the Pixel Watch 3 has the same Snapdragon W5+ Gen 1 SoC for wearables, the same collection of sensors such as HR monitor , ECG readings, SpO2, skin thermometer and GPS. The new addition is the UWB chip.
     This means the Pixel Watch 3 is the first Android smartwatch to offer UWB connectivity, making it easier to unlock your phone or find the gadget if you lose it using Google's Find My Device feature. The watch will also be able to unlock your car if it has the feature, of course.
     The screen gets a slight upgrade. Both the 41 mm and 45mm variants now boast displays capable of 2,000 nits peak brightness, which is a considerable step up from last year's 1,000-nit Pixel Watch 2.
