--- a/pages/tech/tech2.html
+++ b/pages/tech/tech2.html
@@ -75,6 +75,7 @@
     As far as the camera is concerned, the phone gets a 50MP Octa PD wide camera with ƒ/1.68 aperture and 82-degree field of view. There is an ultrawide camera that packs a 48MP Quad PD sensor with an ultrawide lens that has ƒ/1.7 aperture and 123-degree field of view.
     For selfies, the handset features a 10.5MP Dual PD selfie camera. The device is backed by a 4,700mAh battery and comes with IP68 dust and water resistance rating.
 </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MsAPm8TCFhU?si=kKOgOu0jG_PAijEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
     <!-- footer has been started from here -->
 
