add content of  page

--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -50,7 +50,7 @@
                     <li><a href="../../index.html">world news</a></li>
                     <li><a href="./sport.html">Sports</a></li>
                     <li><a href="../tech/tech.html">Tech</a></li>
-                    <li><a href="../entertainment.html">Entertainment</a></li>
+                    <li><a href="../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="../Business/Business_News.html">Business</a></li>
                     <li><a href="../culture.html">Culture</a></li>
                     <li><a href="../education.html">Education</a></li>
