--- a/pages/sport/swapnil.html
+++ b/pages/sport/swapnil.html
@@ -63,7 +63,11 @@
     </div>
     <div class="d-t">
         Date: JUL 05,2023<br>
-    </div>
+    </div>eal at the Paris 2024 Olympics after her appeal was dismissed by the CAS. | Photo Credit: PTI
+
+    Indian wrestler Vinesh Phogat returned to India from a heartbreaking Paris 2024 Olympics after she landed in New Delhi at the IGI airport on Saturday morning.
+    
+    
     <div class="container0">
     <br><br>
     <img src="../../images/swapnil-kusale"style="height:400px;margin:20px">
