--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -71,6 +71,7 @@
     A similar feature has been available on Snapchat since 2017. But the key difference between the two is that Snap Maps lets users make their map updates public for everyone to see, whereas Instagram seems like it does not want to take that chance. “As always, we are building this feature with safety in mind,” a Meta spokesperson was quoted as saying in the report. It is not yet clear for how long the updates shared on the map will remain there.
     The Meta-owned social media platform has been down this road before. Back in 2012, the platform experimented with a feature that allowed users to view their uploaded photos on a map. But the feature was not popular as the photos on the map could not be shared with other users.
 </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6KwyKx18j9o?si=yK2MxoqhL9y_jR-r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
     <!-- footer has been started from here -->
 
