added video and links

--- a/pages/Entertainment/ent-pages/page2.html
+++ b/pages/Entertainment/ent-pages/page2.html
@@ -81,7 +81,8 @@ The judge revoked a bond Sangha previously had from another charge that was not 
            <br>
              
             </div>
-    </div>
+            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CCJoPl1SEBA?si=Kamse2OMVtpRUtFb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
  <!--ended Read More content-->
 
