added sidebar links

--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -139,15 +139,15 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a href="./../../pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
+                        <a href="./../pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a href="./../../pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
+                        <a href="./../pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a href="./../../pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
+                        <a href="./../pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a href="./../../pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
+                        <a href="./../pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <a href="./../../pages/Education/education.html"><button>Load More +</button></a>
+                    <a href="./../git commit "added video and links"pages/Education/education.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
