one card is created

--- a/pages/culture.html
+++ b/pages/culture.html
@@ -24,4 +24,57 @@
                         <li><a href="">Login</a></li>
                     </ul>
                 </div>
-               
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png" alt="telegram-icon"></a>
+
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section class="section-container">
+        <div class="homepage-content">
+            <div class="homepage-Cards-container">
+                <div class="homepage-heading-details">
+                    <h1>From Around the Indian culture</h1>
+                    <a href="" class="more-link">More +</a>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="./../images/cultural1.webp" alt="">
+                        <div class="homepage-Card">
+                            <h3>Tarun Tahiliani defends Olympic uniforms criticism.</h3>
+                            <p>Fashion designer Tarun Tahiliani has firmly defended the design of the Indian contingent's uniforms for the 2024 Paris Olympics, following widespread criticism. Despite social media backlash labelling the outfits as an "eyesore"
+                                and "mediocre," </p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../images/cultural2.webp" alt="">
+                        <div class="homepage-Card">
+                            <h3>Pandit Tanmoy Bose honored with Sri Chinmoy Culture-Light Award</h3>
+                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm and their wedding festivities have already begun, grabbing all the headlines. From exquisite custom-made outfits to glamorous six yards, she
+                                has rocked every look to perfection</p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+                    
