--- a/pages/worldnews/worldnews.html
+++ b/pages/worldnews/worldnews.html
@@ -124,28 +124,28 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a href="./pages/sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
+                        <a href="./../sport/football.html">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</a>
                         <hr>
-                        <a href="./pages/Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
+                        <a href="./../Business/business_news_5.html">VST ropes in Axis Bank to offer loan to farmers</a>
                         <hr>
-                        <a href="./pages/Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
+                        <a href="./../Education/card2.html">CBSE elaborates guidelines for children with special needs</a>
                         <hr>
-                        <a href="./pages/Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
+                        <a href="./../Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <a href="./pages/Education/education.html"><button>Load More +</button></a>
+                    <a href="./../Education/education.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a href="./pages/sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
+                        <a href="./../sport/hocky.html">GREAT WALL':Sreejesh is a legend of hockey : India teammates</a>
                         <hr>
-                        <a href="./pages/tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
+                        <a href="./../tech/tech1.html">Pixel Watch 3 With Brighter Display Launched in India .</a>
                         <hr>
-                        <a href="./pages/Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
+                        <a href="./../Entertainment/ent-pages/page2.html">Multiple people charged in connection to Matthew Perry's death</a>
                         <hr>
-                        <a href="./pages/Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
+                        <a href="./../Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <a href="./pages/Business/Business_News.html"><button>Load More +</button></a>
+                    <a href="./../Business/Business_News.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
@@ -180,22 +180,22 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="./../aboutusPage.html">About</a></li>
+                    <li><a href="./../contact.html">Contact</a></li>
+                    <li><a href="./../login.html">Login</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
