seconed card is created

--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -67,7 +67,7 @@
                                 and "mediocre," </p>
                             <a href="">Read more</a>
                         </div>
-                    </div>
+                    </div>git 
                     <div class="card">
                         <img src="./../images/cultural2.webp" alt="">
                         <div class="homepage-Card">
