--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,16 +80,17 @@
 
     <form class="form ">
         <label for="input full name ">  Full name:</label>
-        <input type="text " id="input full name " /> <br/> <br/>
+        <input type="text " id="input full name " class="box" /> <br/> <br/>
 
         <label for="input email "> Email:</label>
-        <input type="email " id="input email " /> <br/> <br/>
+        <input type="email " id="input email " class="box" /> <br/> <br/>
 
-        <label for="input subject "> subject</label>
-        <input type="subject " id=" input subject " /><br/><br/>
+        <label for="input subject "> subject:</label>
+        <input type="subject " id=" input subject " class="box" /><br/><br/>
 
-        <label for="input meassage ">Message</label>
-        <input type="meassage " id="input message " /><br/><br/>
+        <label for="input meassage ">Message:</label>
+        <input type="meassage " id="input message " class="box message" /><br/><br/>
+
         <input type="submit" value="send message" class="input" /> </form>
     </div>
     </div>
