third card created

--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -77,4 +77,16 @@
                             <a href="">Read more</a>
                         </div>
                     </div>
-                    
+                    <div class="card">
+                        <img src="./../images/cultural3.webp" alt="">
+                        <div class="homepage-Card">
+                            <h3>Celebrating tradition: Nita Ambani stuns in a Kasavu sari on ..</h3>
+                            <p>The biggest wedding of the year is just around the corner, and we can't keep calm. Anant Ambani and Radhika Merchant are all set to tie the knot on July 12, and their wedding festivities have already begun, grabbing all the
+                                headlines.
+                            </p>
+                            <a href="">Read more</a>
+                        </div>
+                    </div>
+                </div>
+
+                
