four card is crated

--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -89,4 +89,21 @@
                     </div>
                 </div>
 
-                
+                <!-- second card container -->
+
+                <div class="hompage-second-card-container">
+                    <div class="homepage-heading-details">
+                        <h1>latest News</h1>
+                        <a href="" class="more-link">More +</a>
+                    </div>
+
+                    <div class="cards">
+                        <div class="card">
+                            <img src="./../images/cultural4.webp" alt="">
+                            <div class="homepage-Card">
+                                <h3>Knowing the early Mughals @ Humayun Museum in Delhi</h3>
+                                <p>As per reports, Union Culture Minister Gajendra Singh Shekhawat officially opened the museum, which showcases over 500 artefacts, many of which are on public display for the first time.</p>
+                                <a href="">Read more</a>
+                            </div>
+                        </div>
+                        
