5th card created

--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -106,4 +106,14 @@
                                 <a href="">Read more</a>
                             </div>
                         </div>
-                        
+                        <div class="card">
+                            <img src="./../images/cultural5.jpg" alt="">
+                            <div class="homepage-Card">
+                                <h3>Amaan and Ayaan Ali Bangash on Ustad Amjad Ali Khan teaching and philosophy are beyond music.
+                                </h3>
+                                <p>
+                                    Amaan and Ayaan Ali Bangash, sons of sarod maestro Ustad Amjad Ali Khan, are known for their sarod duets. They also have successful solo careers.</p>
+                                <a href="">Read more</a>
+                            </div>
+                        </div>
+                       
