sidebar2 is created

--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -148,4 +148,19 @@
                     </div>
                     <button>Load More +</button>
                 </div>
-                
+                <div class="sidebar-section">
+                    <h2>Popular News</h2>
+                    <div>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                        <hr>
+                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
+                            voluptatibus iure necessitatibus dicta.</a>
+                    </div>
+                    
