--- a/pages/culture/culture.html.html
+++ b/pages/culture/culture.html.html
@@ -163,4 +163,31 @@
                         <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
                             voluptatibus iure necessitatibus dicta.</a>
                     </div>
+                    <button>Load More +</button>
+                </div>
+                <div class="newsletter-section">
+                    <h2>Subscribe to our Newsletter</h2>
+                    <form>
+                        <input type="email" name="email" placeholder="Your email" required>
+                        <input type="text" name="name" placeholder="Your name" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+</body>
+
+</html>
+
+
+</body>
+
+          
                     
