add video on the  page

--- a/pages/sport/hocky.html
+++ b/pages/sport/hocky.html
@@ -90,7 +90,14 @@
             “Harmanpreet is a goal machine of the team and we receive a lot of help from him he is the ‘Sarpanch’.”
             Jarmanpreet was happy with his own performance in his maiden Olympics.
             “I enjoyed myself at this year’s Olympics, this was my first Olympics, and my target was to perform well for my team and the country.</p>
-</div>
+            <div style="margin:20px 200px;">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EENUzS36DuA?si=6zLYVEmYYaA27KF_&amp;start=14" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                </div>
+
+
+
+        </div>
 
 <!-- footer has been started from here -->
 
