add video on the  page

--- a/pages/sport/olympic.html
+++ b/pages/sport/olympic.html
@@ -101,6 +101,12 @@
         
         
                 <br>
+                <div style="margin:20px 200px;">
+
+
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/v33RvEK-uJc?si=RXEmsN0DEYs9qH-5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                </div>
 
 <div>
 
