marquee tag added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
 
     <!-- End here navbar  -->
 
+    <div class="marquee-container">
+      <marquee behavior="scroll" direction="left">
+        📰 Breaking News: Stay updated with the latest headlines, trending
+        stories, and exclusive reports. Visit us daily for fresh news updates
+        and insightful articles. Don't miss out!
+      </marquee>
+    </div>
+
     <!-- hero section started form here  -->
 
     <section class="hero-section">
