--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/aboutusPage.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../images/faviconIcon.jpeg" type="image/jpeg" />
+    <link rel="stylesheet" href="../CSS/aboutusPage.css" />
     <title>About Us - The News Reporter</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- started here navbar -->
 
     <header>
-        <nav>
-            <div class="top-navbar">
-                <div class="main-logo">
-                    <a href="../index.html">
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </a>
-                </div>
-                <div>
-                    <ul class="top-nav-list">
-                        <li><a href="../index.html">Home</a></li>|
-                        <li>About</li>|
-                        <li><a href="./contact.html">Contact</a></li>|
-                        <li><a href="./login.html">Login</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
-                                alt="youtube-icon"></a>
-                    </div>
-                    <div class="search-and-bar">
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="../images/magnifying-glass.png" />
-                        </div>
-                        <img class="menu-bar-icon" src="../images/bar-icon.png" alt="tap to open menu">
-                    </div>
-                </div>
+      <nav>
+        <div class="top-navbar">
+          <div class="main-logo">
+            <a href="../index.html">
+              <h4>The</h4>
+              <h2><span class="heading-fisrt">News</span> Reporter</h2>
+            </a>
+          </div>
+          <div>
+            <ul class="top-nav-list">
+              <li><a href="../index.html">Home</a></li>
+              |
+              <li>About</li>
+              |
+              <li><a href="./contact.html">Contact</a></li>
+              |
+              <li><a href="./login.html">Login</a></li>
+            </ul>
+          </div>
+          <div>
+            <div class="top-nav-icons">
+              <a href="http://facebook.com" target="_blank"
+                ><img
+                  src="../images/facebook.png"
+                  alt="facebook-icon"
+                  target="_blank"
+              /></a>
+              <a href="https://instagram.com" target="_blank"
+                ><img src="../images/instagram.png" alt="instagram-icon"
+              /></a>
+              <a href="https://web.telegram.org" target="_blank"
+                ><img src="../images/telegram.png" alt="telegram-icon"
+              /></a>
+              <a href="https://youtube.com" target="_blank"
+                ><img src="../images/youtube.png" alt="youtube-icon"
+              /></a>
             </div>
+            <div class="search-and-bar">
+              <div class="top-nav-search-bar">
+                <input type="text" placeholder="Search news" />
+                <img src="../images/magnifying-glass.png" />
+              </div>
+              <img
+                class="menu-bar-icon"
+                src="../images/bar-icon.png"
+                alt="tap to open menu"
+              />
+            </div>
+          </div>
+        </div>
 
-            <div>
-                <ul class="nav-list">
-                    <li><a href="./Business/Business_News.html">world news</a></li>
-                    <li><a href="./sport/cricket.html">Sports</a></li>
-                    <li><a href="./tech/tech.html">Tech</a></li>
-                    <li><a href="./Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="./Business/Business_News.html">Business</a></li>
-                    <li><a href="./culture.html">Culture</a></li>
-                    <li><a href="./Education/education.html">Education</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div>
+          <ul class="nav-list">
+            <li><a href="./Business/Business_News.html">world news</a></li>
+            <li><a href="./sport/cricket.html">Sports</a></li>
+            <li><a href="./tech/tech.html">Tech</a></li>
+            <li>
+              <a href="./Entertainment/entertainment.html">Entertainment</a>
+            </li>
+            <li><a href="./Business/Business_News.html">Business</a></li>
+            <li><a href="./culture.html">Culture</a></li>
+            <li><a href="./Education/education.html">Education</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <!-- End here navbar  -->
@@ -68,111 +84,125 @@
     <!-- hero section started form here  -->
 
     <section class="hero-section">
-        <div class="hero-content">
-            <h1>Welcome to the News Reporter
-                media company</h1>
-            <a href="../index.html"><button>Read More</button></a>
-        </div>
+      <div class="hero-content">
+        <h1>Welcome to the News Reporter media company</h1>
+        <a href="../index.html"><button>Read More</button></a>
+      </div>
     </section>
 
     <!-- hero section end here  -->
 
     <div class="about-content-cards">
-        <div class="about-content">
-            <h2>Core Values</h2>
-            <p>Integrity, Excellence, Transparency, and Dedication are the pillars of our company. We stand by these
-                values to
-                deliver the best content.</p>
-        </div>
+      <div class="about-content">
+        <h2>Core Values</h2>
+        <p>
+          Integrity, Excellence, Transparency, and Dedication are the pillars of
+          our company. We stand by these values to deliver the best content.
+        </p>
+      </div>
 
-        <div class="about-content">
-            <h2>What We Do</h2>
-            <p>We cover a wide range of topics including World News, Sports, Technology, Entertainment, Business,
-                Culture, and
-                Education.</p>
-        </div>
+      <div class="about-content">
+        <h2>What We Do</h2>
+        <p>
+          We cover a wide range of topics including World News, Sports,
+          Technology, Entertainment, Business, Culture, and Education.
+        </p>
+      </div>
 
-        <div class="about-content">
-            <h2>Testimonials</h2>
-            <p>The News Reporter is my go-to source for up-to-date and trustworthy news. Their reporting is
-                always on
-                point!</p>
-        </div>
+      <div class="about-content">
+        <h2>Testimonials</h2>
+        <p>
+          The News Reporter is my go-to source for up-to-date and trustworthy
+          news. Their reporting is always on point!
+        </p>
+      </div>
 
-        <div class="about-content">
-            <h2>Awards & Recognition</h2>
-            <p>We are committed to delivering exceptional journalism and making a significant contribution to the media
-                industry. </p>
-
-        </div>
-
+      <div class="about-content">
+        <h2>Awards & Recognition</h2>
+        <p>
+          We are committed to delivering exceptional journalism and making a
+          significant contribution to the media industry.
+        </p>
+      </div>
     </div>
 
     <!-- footer has been started from here -->
 
     <footer>
-        <div class="footer-section">
-
-
-            <div class="footer-nav-links">
-                <h3>Subscribe to our Newsletter</h3>
-                <form>
-                    <input type="email" name="email" placeholder="Your email" required>
-                    <input type="text" name="name" placeholder="Your name" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li href="#">About</li>
-                    <li><a href="./contact.html">Contact</a></li>
-                    <li><a href="./login.html">Login</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Important Links</h3>
-                <ul>
-                    <li><a href="./Business/Business_News.html">world news</a></li>
-                    <li><a href="./sport/cricket.html">Sports</a></li>
-                    <li><a href="./tech/tech.html">Tech</a></li>
-                    <li><a href="./Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="./Business/Business_News.html">Business</a></li>
-                    <li><a href="./culture.html">Culture</a></li>
-                    <li><a href="./Education/education.html">Education</a></li>
-                </ul>
-            </div>
-            <div class="footer-nav-links">
-                <h3>Address</h3>
-                <ul>
-                    <li>4567 Shivaji Lane</li>
-                    <li>Chatrapati Nagar, Ward 12</li>
-                    <li>Nagpur, Maharashtra 440018
-                        India</li>
-                </ul>
-                <div class="footer-follow-us-Container">
-                    <h3>Follow Us</h3>
-                    <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png"
-                                alt="youtube-icon"></a>
-                    </div>
-                </div>
-            </div>
+      <div class="footer-section">
+        <div class="footer-nav-links">
+          <h3>Subscribe to our Newsletter</h3>
+          <form>
+            <input
+              type="email"
+              name="email"
+              placeholder="Your email"
+              required
+            />
+            <input type="text" name="name" placeholder="Your name" required />
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
-        <div class="footer-copyright-section">
-            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+        <div class="footer-nav-links">
+          <h3>Links</h3>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li href="#">About</li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./login.html">Login</a></li>
+          </ul>
         </div>
+        <div class="footer-nav-links">
+          <h3>Important Links</h3>
+          <ul>
+            <li><a href="./Business/Business_News.html">world news</a></li>
+            <li><a href="./sport/cricket.html">Sports</a></li>
+            <li><a href="./tech/tech.html">Tech</a></li>
+            <li>
+              <a href="./Entertainment/entertainment.html">Entertainment</a>
+            </li>
+            <li><a href="./Business/Business_News.html">Business</a></li>
+            <li><a href="./culture.html">Culture</a></li>
+            <li><a href="./Education/education.html">Education</a></li>
+          </ul>
+        </div>
+        <div class="footer-nav-links">
+          <h3>Address</h3>
+          <ul>
+            <li>4567 Shivaji Lane</li>
+            <li>Chatrapati Nagar, Ward 12</li>
+            <li>Nagpur, Maharashtra 440018 India</li>
+          </ul>
+          <div class="footer-follow-us-Container">
+            <h3>Follow Us</h3>
+            <div class="top-nav-icons">
+              <a href="http://facebook.com" target="_blank"
+                ><img
+                  src="../images/facebook.png"
+                  alt="facebook-icon"
+                  target="_blank"
+              /></a>
+              <a href="https://instagram.com" target="_blank"
+                ><img src="../images/instagram.png" alt="instagram-icon"
+              /></a>
+              <a href="https://web.telegram.org" target="_blank"
+                ><img src="../images/telegram.png" alt="telegram-icon"
+              /></a>
+              <a href="https://youtube.com" target="_blank"
+                ><img src="../images/youtube.png" alt="youtube-icon"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright-section">
+        <p>
+          Copyright © 2024 The News Reporter. All rights reserved | Design by
+          ICP-9.0 Group 9
+        </p>
+      </div>
     </footer>
 
     <!-- footer has been ended here -->
-
-</body>
-
+  </body>
 </html>
