--- a/pages/login.html
+++ b/pages/login.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>Login - News Website</title>
     <link rel="stylesheet" href="../CSS/login.css" />
   </head>
