--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -195,22 +195,22 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./pages/aboutusPage.html">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./../../../index.html">Home</a></li>|
+                    <li><a href="./../../../pages/aboutusPage.html">About</a></li>|
+                    <li><a href="./../../../pages/contact.html">Contact</a></li>|
+                    <li><a href="./../../login.html">Login</a></li> 
                 </ul>
             </div>
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../../sport/sport.html">Sports</a></li>
+                    <li><a href="./../../tech/tech.html">Tech</a></li>
+                    <li><a href="./../../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../../Business/Business_News.html">Business</a></li>
+                    <li><a href="./../../culture.html">Culture</a></li>
+                    <li><a href="./../../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
