footer links corrected

--- a/pages/Entertainment/ent-pages/page4.html
+++ b/pages/Entertainment/ent-pages/page4.html
@@ -106,9 +106,9 @@ Another person said, "Shraddha Kapoor's presence is surreal. Rajkumar Rao's styl
         <div class="footer-nav-links">
             <h3>Links</h3>
             <ul>
-                <li><a href="./../../../index.html">Home</a></li>|
-                <li><a href="./../../../pages/aboutusPage.html">About</a></li>|
-                <li><a href="./../../../pages/contact.html">Contact</a></li>|
+                <li><a href="./../../../index.html">Home</a></li>
+                <li><a href="./../../aboutusPage.html">About</a></li>
+                <li><a href="./../../contact.html">Contact</a></li>
                 <li><a href="./../../login.html">Login</a></li>
             </ul>
         </div>
@@ -116,12 +116,12 @@ Another person said, "Shraddha Kapoor's presence is surreal. Rajkumar Rao's styl
             <h3>Important Links</h3>
             <ul>
                 <li><a href="./../../worldnews/worldnews.html">world news</a></li>
-                    <li><a href="./../../sport/sport.html">Sports</a></li>
-                    <li><a href="./../../tech/tech.html">Tech</a></li>
-                    <li><a href="./../../Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="./../../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../../culture.html">Culture</a></li>
-                    <li><a href="./../../Education/education.html">Education</a></li>
+                <li><a href="./../../sport/sport.html">Sports</a></li>
+                <li><a href="./../../tech/tech.html">Tech</a></li>
+                <li><a href="./../../Entertainment/entertainment.html">Entertainment</a></li>
+                <li><a href="./../../Business/Business_News.html">Business</a></li>
+                <li><a href="./../../culture.html">Culture</a></li>
+                <li><a href="./../../Education/education.html">Education</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
