--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -193,7 +193,7 @@
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="Business_News.html">Business</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
                     <li><a href="./../culture.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
