--- a/pages/Entertainment/ent-pages/page3.html
+++ b/pages/Entertainment/ent-pages/page3.html
@@ -105,9 +105,9 @@ After a thunderous opening across the globe, Deadpool & Wolverine has become one
         <div class="footer-nav-links">
             <h3>Links</h3>
             <ul>
-                <li><a href="./../../../index.html">Home</a></li>|
-                <li><a href="./../../../pages/aboutusPage.html">About</a></li>|
-                <li><a href="./../../../pages/contact.html">Contact</a></li>|
+                <li><a href="./../../../index.html">Home</a></li>
+                <li><a href="./../../aboutusPage.html">About</a></li>
+                <li><a href="./../../contact.html">Contact</a></li>
                 <li><a href="./../../login.html">Login</a></li>
             </ul>
         </div>
