--- a/pages/Entertainment/ent-pages/page6.html
+++ b/pages/Entertainment/ent-pages/page6.html
@@ -106,10 +106,10 @@ The White Tiger star Adarsh Gourav also attended the session. Kartik Aaryan said
         <div class="footer-nav-links">
             <h3>Links</h3>
             <ul>
-                <li><a href="./../../../index.html">Home</a></li>|
-                        <li><a href="./../../../pages/aboutusPage.html">About</a></li>|
-                        <li><a href="./../../../pages/contact.html">Contact</a></li>|
-                        <li><a href="./../../login.html">Login</a></li>
+                <li><a href="./../../../index.html">Home</a></li>
+                <li><a href="./../../aboutusPage.html">About</a></li>
+                <li><a href="./../../contact.html">Contact</a></li>
+                <li><a href="./../../login.html">Login</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
