--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -3,6 +3,7 @@
 <head>
     <title> The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
+    <link rel="icon" href="./../../images/logo1.jpg" type="img/png">
 </head>
 <body>
     <header>
