--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World News</title>
     <link rel="stylesheet" href="./../../CSS/business.css" />
+    <link rel="icon" href="./../../images/logo1.jpg" type="img/png">
 </head>
 
 <body>
