--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -28,14 +28,10 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png" alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png" alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
@@ -46,7 +42,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
@@ -70,8 +66,7 @@
                         <img src="./../../images/Adani_business.jpeg" alt="Business_news 1">
                         <div class="homepage-Card">
                             <h3>Adani now allowed to sell Bangladesh-bound power in India</h3>
-                            <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh
-                                can now provide the domestic market</p>
+                            <p>Adani Power coalfired power plant under contract to offer all its output to Bangladesh can now provide the domestic market</p>
                             <a href="business_news_1.html">Read more</a>
                         </div>
                     </div>
@@ -79,8 +74,7 @@
                         <img src="./../../images/market_business.jpg" alt="Business_news 2">
                         <div class="homepage-Card">
                             <h3>Sensex snaps two-day losing streak on rebound in IT shares</h3>
-                            <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing
-                                streak following a rally in IT stocks amid a surge in the US markets.</p>
+                            <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing streak following a rally in IT stocks amid a surge in the US markets.</p>
                             <a href="business_news_2.html">Read more</a>
                         </div>
                     </div>
@@ -88,8 +82,7 @@
                         <img src="./../../images/economic_business.jpg" alt="Business_news 3">
                         <div class="homepage-Card">
                             <h3>Wholesale price inflation drops to 2.04% in July</h3>
-                            <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to
-                                2.04% in July, with the rise in food prices</p>
+                            <p>Inflation in India’s wholesale prices dropped from a 16-month high of 3.4% in June, to 2.04% in July, with the rise in food prices</p>
                             <a href="business_news_3.html">Read more</a>
                         </div>
                     </div>
@@ -97,8 +90,7 @@
                         <img src="./../../images/OLA_business.jpeg" alt="Business_news 4">
                         <div class="homepage-Card">
                             <h3>Ola Electric posts bigger Q1 loss as incentives drop, costs rise</h3>
-                            <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts
-                                it took to boost demand after the government reduced incentives.</p>
+                            <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts it took to boost demand after the government reduced incentives.</p>
                             <a href="business_news_4.html">Read more</a>
                         </div>
                     </div>
@@ -106,8 +98,7 @@
                         <img src="./../../images/agriculture_business.jpeg" alt="Business_news 5">
                         <div class="homepage-Card">
                             <h3>VST ropes in Axis Bank to offer loan to farmers</h3>
-                            <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of
-                                Understanding (MOU) with Axis Bank</p>
+                            <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of Understanding (MOU) with Axis Bank</p>
                             <a href="business_news_5.html">Read more</a>
                         </div>
                     </div>
@@ -115,8 +106,7 @@
                         <img src="./../../images/money_business.jpg" alt="Business_news 6">
                         <div class="homepage-Card">
                             <h3>Rupee rises 7 paise against US dollar in early trade</h3>
-                            <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024
-                                American currency retreated from its elevated levels.</p>
+                            <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024 American currency retreated from its elevated levels.</p>
                             <a href="business_news_6.html">Read more</a>
                         </div>
                     </div>
@@ -203,20 +193,16 @@
                 <ul>
                     <li>4567 Shivaji Lane</li>
                     <li>Chatrapati Nagar, Ward 12</li>
-                    <li>Nagpur, Maharashtra 440018
-                        India</li>
+                    <li>Nagpur, Maharashtra 440018 India
+                    </li>
                 </ul>
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png" alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png" alt="youtube-icon"></a>
                     </div>
                 </div>
             </div>
