links added in footer

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -201,7 +201,7 @@
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
                     <li><a href="./../culture/culture.html.html">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
