add all changes

--- a/pages/sport/football.html
+++ b/pages/sport/football.html
@@ -18,10 +18,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../../pages/login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -59,7 +59,7 @@
     <!-- End here navbar  -->
      <!-- End here navbar  -->
      <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="./../sport/sport.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
     <h1>Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</h1>
     </div>
     <div class="d-t">
@@ -99,8 +99,8 @@
             <ul>
                 <li><a href="./../../index.html">Home</a></li>
                 <li><a href="./../aboutusPage.html">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Login</a></li>
+                <li><a href="./../contact.html">Contact</a></li>
+                <li><a href="./../login.html">Login</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
@@ -109,10 +109,10 @@
                 <li><a href="./../../index.html">world news</a></li>
                 <li><a href="./../sport/sport.html">Sports</a></li>
                 <li><a href="./../tech/tech.html">Tech</a></li>
-                <li><a href="">Entertainment</a></li>
+                <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                 <li><a href="./../Business/Business_News.html">Business</a></li>
-                <li><a href="./../culture.html">Culture</a></li>
-                <li><a href="">Education</a></li>
+                <li><a href="../../culture.html">Culture</a></li>
+                <li><a href="./../Education/education.html">Education</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
