--- a/pages/sport/olympic.html
+++ b/pages/sport/olympic.html
@@ -18,10 +18,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -138,8 +138,8 @@
             <ul>
                 <li><a href="./../../index.html">Home</a></li>
                 <li><a href="./../aboutusPage.html">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Login</a></li>
+                <li><a href="./../contact.html">Contact</a></li>
+                <li><a href="./../login.html">Login</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
@@ -148,10 +148,10 @@
                 <li><a href="./../../index.html">world news</a></li>
                 <li><a href="./../sport/sport.html">Sports</a></li>
                 <li><a href="./../tech/tech.html">Tech</a></li>
-                <li><a href="">Entertainment</a></li>
+                <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                 <li><a href="./../Business/Business_News.html">Business</a></li>
                 <li><a href="./../culture.html">Culture</a></li>
-                <li><a href="">Education</a></li>
+                <li><a href="./../Education/education.html">Education</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
