--- a/pages/sport/cricket.html
+++ b/pages/sport/cricket.html
@@ -18,10 +18,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li><a href="././../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -58,7 +58,7 @@
 
     <!-- End here navbar  -->
     <div class="readmore-heading-details">
-        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="./../sport/sport.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
 
         <h1 style="text-align: center;">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h1>
     </div>
@@ -66,8 +66,7 @@
         Date: Aug 8,2024<br>
            </div>
 <div class="container0">
-
-    <img src="./../../images/rohitsharma"style="height:400px;margin:20px">
+<img src="./../../images/rohitsharma"style="height:400px;margin:20px">
     <br>
  <span style="font-size:12px;text-align: center;">India captain Rohit Sharma at the end of the third ODI against Sri Lanka in Colombo.</span>
  <br>
@@ -110,8 +109,8 @@ In the third ODI of the series, Sri Lanka defeated India by 110 runs on Wednesda
             <ul>
                 <li><a href="./../../index.html">Home</a></li>
                 <li><a href="./../aboutusPage.html">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Login</a></li>
+                <li><a href="./../contact.html">Contact</a></li>
+                <li><a href="./../login.html">Login</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
@@ -120,10 +119,10 @@ In the third ODI of the series, Sri Lanka defeated India by 110 runs on Wednesda
                 <li><a href="./../../index.html">world news</a></li>
                 <li><a href="./../sport/sport.html">Sports</a></li>
                 <li><a href="./../tech/tech.html">Tech</a></li>
-                <li><a href="">Entertainment</a></li>
+                <li><a href="./../Entertainment/ent-pages/">Entertainment</a></li>
                 <li><a href="./../Business/Business_News.html">Business</a></li>
                 <li><a href="./../culture.html">Culture</a></li>
-                <li><a href="">Education</a></li>
+                <li><a href="./../Education/education.html">Education</a></li>
             </ul>
         </div>
         <div class="footer-nav-links">
