--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,24 +80,25 @@
 
     <form class="form ">
         <label for="input full name ">  Full name:</label>
-        <input type="text " id="input full name " class="box" /> <br/> <br/>
+        <input type="text " id="input full name " required class="box" /> <br/> <br/>
 
-        <label for="eamil">email </label>
-        <a href="mailto:rutujagmail.com">
-            <input type="text" id="input eamil" class="box"></a>
+        <label for="eamil">Enter Email:</label>
+        <a href="mailto:abc@gamil.com"> <input type="text" id="input email" required class="box" /></a>
         <br/> <br/>
+        <label for="input password ">password:</label>
+        <input type="password" id="password " required class="box" /> <br/> <br/>
 
-        <label for="phone number">number:</label>
-        <a href="tel:7397978183">
-            <input type="phone number" id="phone number" class="box" />
+        <label for="phone number ">number:</label>
+        <a href="tel:2345097856">
+            <input type="phone number " id="number " required class="box" />
         </a><br/><br/>
         <label for="input subject "> subject:</label>
-        <input type="subject " id=" input subject " class="box" /> <br/><br/>
+        <input type="subject " id=" input subject " required class="box " /> <br/><br/>
 
         <label for="input meassage ">Message:</label>
-        <input type="meassage " id="input message " class="box message" /><br/><br/>
+        <input type="meassage " id="input message " required class="box message" /><br/><br/>
 
-        <input type="submit" value="send message" class="input" /> </form>
+        <input type="submit " value="send message " class="input " /> </form>
     </div>
     </div>
 
@@ -125,7 +126,7 @@
             <div class="footer-nav-links ">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="./worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./worldnews/worldnews.html ">world news</a></li>
                     <li><a href=" ./sport/sport.html ">Sports</a></li>
                     <li><a href="./tech/tech.html ">Tech</a></li>
                     <li><a href="./Entertainment/entertainment.html ">Entertainment</a></li>
@@ -158,5 +159,7 @@
         </div>
     </footer>
 </body>
+
+</html>
 
 </html>
