--- a/pages/Education/card3.html
+++ b/pages/Education/card3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
-    <link rel="icon" href="./../../images/logo1.jpg" type="img/png">
+    <<link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 
 <body>
