--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
-    <title>Document</title>
+    <title>The News Reporter</title>
+    <link rel="stylesheet" href="./../../CSS/culture/cultural_news.css" />
 </head>
 
 <body>
+    <!-- started here navbar -->
     <header>
         <nav>
             <div class="top-navbar">
@@ -18,10 +19,10 @@
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="./../index.html">Home</a></li>|
+                        <li><a href="./../../index.html">Home</a></li>|
                         <li><a href="./../aboutusPage.html">About</a></li>|
                         <li><a href="./../contact.html">Contact</a></li>|
-                        <li><a href="./../loginpage.html">Login</a></li>
+                        <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -48,9 +49,9 @@
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
-                    <li><a href="./../Education/Education.html">Education</a></li>
+                    <li><a href="./../Business_News.html">Business</a></li>
+                    <li><a href="./../cultural_news.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
@@ -174,7 +175,7 @@
 
      <!-- footer has been started from here -->
 
-     <footer>
+    <footer>
         <div class="footer-section">
             <div class="footer-nav-links">
                 <h3>Subscribe to our Newsletter</h3>
@@ -187,22 +188,22 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./../../index.html">Home</a></li>
+                    <li><a href="./../aboutusPage.html">About</a></li>
+                    <li><a href="./../contact.html">Contact</a></li>
+                    <li><a href="./../login.html">Login</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="Business_News.html">Business</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
@@ -235,12 +236,8 @@
 
     <!-- footer has been ended here -->
 
-
 </body>
 
-</html> 
-
-    </body>
 </html>
     
     
