--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/jpeg" href="./../../images/faviconIcon.jpeg" />
+    <title>The News Reporter</title>
     <link rel="stylesheet" href="../../CSS/tech.css">
 </head>
 <body>
@@ -144,7 +145,7 @@
                         <hr>
                         <a href="./../Education/card3.html">PM Modi: No need for youth to study abroad with new education system.</a>
                     </div>
-                    <a href="./tech.html"><button>Load More +</button></a>
+                    <a href="./../sport/sport.html"><button>Load More +</button></a>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
@@ -157,7 +158,7 @@
                         <hr>
                         <a href="./../Business/business_news_6.html">Rupee rises 7 paise against US dollar in early trade</a>
                     </div>
-                    <a href="./tech.html"><button>Load More +</button></a>
+                    <a href="./../Business/Business_News.html"><button>Load More +</button></a>
                 </div>
                 <div class="newsletter-section">
                     <h2>Subscribe to our Newsletter</h2>
